--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev:admin": "pnpm --filter admin dev",
     "dev:storefront": "pnpm --filter storefront dev",
     "dev:inngest": "npx inngest-cli dev",
-    "build": "pnpm --filter db generate && pnpm -r build",
+    "build": "pnpm --filter db generate && pnpm --filter '...' build",
+    "build:admin": "pnpm --filter db generate && pnpm --filter @lumi/shared build && pnpm --filter @lumi/compliance-core build && pnpm --filter admin build",
+    "build:api": "pnpm --filter db generate && pnpm --filter @lumi/shared build && pnpm --filter @lumi/compliance-core build && pnpm --filter api build",
+    "build:storefront": "pnpm --filter db generate && pnpm --filter @lumi/shared build && pnpm --filter storefront build",
     "db:generate": "pnpm --filter db generate",
     "db:migrate": "pnpm --filter db migrate",
     "db:studio": "pnpm --filter db studio",
