--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@lumi/shared": "workspace:*",
+    "@lumi/db": "workspace:*",
+    "@lumi/compliance-core": "workspace:*",
+    "bcryptjs": "^3.0.3",
+    "inngest": "^3.12.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
