Fix build: Add db build step before shared build
- @lumi/shared depends on @lumi/db
- db package needs TypeScript compilation (build) not just Prisma generate
- Added pnpm --filter db build step to build commands
- Fixes: Cannot find module '@lumi/db' error

--- a/apps/main/.env.example
+++ b/apps/main/.env.example
@@ -1,4 +1,4 @@
-﻿# Database
+# Database
 # Required for Prisma client generation
 # Use the pooled connection string for most operations
 DATABASE_URL=postgresql://user:password@host:5432/dbname?sslmode=require
