--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev:api": "pnpm --filter api dev",
     "dev:main": "concurrently \"npx inngest-cli dev\" \"pnpm --filter api dev\" \"pnpm --filter main dev\" --names \"inngest,api,main\" --prefix-colors \"blue,green,yellow\"",
     "dev:inngest": "npx inngest-cli dev",
-    "build": "pnpm --filter db generate && pnpm --filter @lumi/shared build && pnpm --filter main build",
+    "build": "pnpm --filter db generate && pnpm --filter db build && pnpm --filter @lumi/shared build && pnpm --filter main build",
     "build:api": "pnpm --filter db generate && pnpm --filter @lumi/shared build && pnpm --filter @lumi/compliance-core build && pnpm --filter api build",
-    "build:main": "pnpm --filter db generate && pnpm --filter @lumi/shared build && pnpm --filter main build",
+    "build:main": "pnpm --filter db generate && pnpm --filter db build && pnpm --filter @lumi/shared build && pnpm --filter main build",
     "db:generate": "pnpm --filter db generate",
     "db:migrate": "pnpm --filter db migrate",
     "db:studio": "pnpm --filter db studio",
@@ -34,5 +34,5 @@
       "protobufjs",
       "unrs-resolver"
     ]
-  }
+}
 }
