--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -23,6 +23,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^7.2.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
