Implement comprehensive error handling
1. Custom Error Pages âœ…
   - 404 page (not-found.tsx) with branded design
   - 500 error page (error.tsx) with reset functionality
   - Global error page (global-error.tsx) for root layout errors
   - All pages match site branding with header and footer

2. Error Tracking (Sentry) âœ…
   - Sentry Next.js SDK installed and configured
   - Client, server, and edge runtime configurations
   - Automatic error capture with context
   - Session replay (10% sample rate)
   - Performance monitoring (10% trace sample rate)
   - Sensitive data filtering (removes auth headers, cookies)
   - Development mode disabled by default

3. User-Friendly Error Messages âœ…
   - Error message utility with 20+ error codes
   - User-friendly messages with titles and suggested actions
   - Covers: auth, validation, compliance, payment, shipping errors
   - Updated API routes: login, signup, products
   - Technical details only shown in development mode
   - All errors logged to Sentry (if configured)

All error handling features are production-ready.

--- a/apps/main/.env.example
+++ b/apps/main/.env.example
@@ -53,10 +53,14 @@ SHIPPO_TOKEN=your_shippo_token
 SALES_TAX_RATE=0
 EXCISE_TAX_PER_GRAM=0
 
-# Monitoring (Optional)
-# For error tracking (e.g., Sentry)
+# Error Tracking (Sentry) - Optional
+# Get your DSN from https://sentry.io
 # MONITORING_ENABLED=true
 # SENTRY_DSN=your_sentry_dsn
+# NEXT_PUBLIC_SENTRY_DSN=your_sentry_dsn
+# SENTRY_ORG=your_sentry_org
+# SENTRY_PROJECT=your_sentry_project
+# SENTRY_ENABLE_DEV=false  # Set to true to enable Sentry in development
 
 # Node Environment
 NODE_ENV=development  # development | production
